sass files orginize

--- a/src/sass/abstracts/_mixins.scss
+++ b/src/sass/abstracts/_mixins.scss
@@ -48,7 +48,7 @@
     width: 20rem;
     height: 20rem;
     border-radius: 50%;
-    background-image: url(../../public/img/img-me.png);
+    background-image: url(../../../public/img/img-me.png);
     background-color: $color-light-gray;
     background-position: 120% 0%;
     background-size: 110%;
