--- a/src/sass/pages/_work.scss
+++ b/src/sass/pages/_work.scss
@@ -124,22 +124,22 @@
 }
 
 .bgushome {
-    background-image: url(../../public/img/project-ushome-images/final-3.png);
+    background-image: url(../../../public/img/project-ushome-images/final-3.png);
     @include bg-work;
 }
 
 .bgmegafruver {
-    background-image: url(../../public/img/project-megafruver-images/final-1.png);
+    background-image: url(../../../public/img/project-megafruver-images/final-1.png);
     @include bg-work;
     }
 
 .bgwoodsidevision {
-    background-image: url(../../public/img/project-woodsidevision-images/final-1.png);
+    background-image: url(../../../public/img/project-woodsidevision-images/final-1.png);
     @include bg-work;
 }
 
 .bgjtportfolio {
-    background-image: url(../../public/img/final-1.png);
+    background-image: url(../../../public/img/final-1.png);
     @include bg-work;
     }
 .item-top-text, .item-middle-text, .item-bottom-text {
