homepage text fix

--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -4,7 +4,7 @@
     display: flex;
     justify-content: center;
     line-height: 3.2rem;
-    padding: 0 9%;    
+    padding: 0 9%;
 }
 .mainBox {
     height: 85vh;
@@ -14,55 +14,56 @@
     @include respond(tab-port) {
         width: 90%;
     }
-    
+
 }
 .mainBox-inside {
     background-color: $color-dark;
     height: 100%;
     display: flex;
     justify-content: center;
-    flex-direction: column;    
+    flex-direction: column;
     padding: 0 7%;
     @include respond(tab-port) {
         padding: 0 8%;
     }
     @include respond(tab-land) {
-        padding: 0 7%;
+        padding-top: 7%;
     }
 }
-.mainBox-note {    
-    color:$color-invisible-gray;    
+.mainBox-note {
+    color:$color-invisible-gray;
     font-family: kalam;
     font-size: 1.8rem;
     padding: 10px 0;
 }
-.mainBox-intro {    
+.mainBox-intro {
     font-weight: 400;
-    color:$color-light;  
-    font-size: 2rem;  
+    color:$color-light;
+    font-size: 3rem;
+    line-height: 3.5rem;
     @include respond(phone) {
         font-size: 2.7rem;
         line-height: 3.5rem;
     }
     @include respond(tab-port) {
         font-size: 3rem;
-        line-height: 4.5rem;  
+        line-height: 4.5rem;
     }
     @include respond(tab-land) {
-        font-size: 4rem;
-        line-height: 5rem; 
+        font-size: 3.5rem;
+        line-height: 4.5rem;
     }
     @include respond(big-desktop) {
         font-size: 5.5rem;
-        line-height: 7.5rem;   
+        line-height: 7.5rem;
     }
     span {
         color: $color-primary;
         font-weight: 800;
-        font-size: 3.1rem;
-        letter-spacing: -.2rem;              
+        font-size: 3.8rem;
+        letter-spacing: -.2rem;
         @include respond(phone) {
-            font-size: 3.9rem;            
+            font-size: 3.9rem;
         }
         @include respond(tab-port) {
             font-size: 5rem;
@@ -72,27 +73,26 @@
         }
         @include respond(big-desktop) {
             font-size: 8.2rem;
-            
+
         }
     }
 }
 .mainBox-down {
     display: flex;
     justify-content: flex-end;
-    margin: 0 10%;
+    padding: 40% 10% 0 0;
     @include respond(tab-port) {
-        padding-top: 4%;
+        padding: 15% 10% 0 0;
     }
     @include respond(big-desktop) {
-        padding-top: 8%;
-        padding-right: 2%;
+        padding: 8% 5% 0 0;
     }
 }
 
 .mainBox-botton {
     display: flex;
     align-items: center;
-    justify-content: center;    
+    justify-content: center;
     height: 7rem;
     width: 7rem;
     border-radius: 50%;
