--- a/src/sass/abstracts/_mixins.scss
+++ b/src/sass/abstracts/_mixins.scss
@@ -130,7 +130,7 @@ MOBILE FIRST
         @media (min-width: 321px) { @content };
     }
     @if $breakpoint == phone {
-        @media (min-width: 480px) { @content };
+        @media (max-height: 480px) { @content };
     }
     @if $breakpoint == tab-port {
         @media (min-width: 600px) { @content };
