--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -1,19 +1,17 @@
 
 .footer {
-    grid-area: footer;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100%;
     background-color: $color-ligther-gray;
     color: $color-dark;
     font-size: 1.5rem;
     font-weight: 500;
-    text-align: center;
+    padding: 1rem 0;
     p {
         font-size: 1.3rem;
-    }    
+    }
 }
 .footer a:visited {
     color: $color-dark;
@@ -21,7 +19,7 @@
 .footer a:hover{
     color: $color-primary;
 }
- 
-.footer-links {    
-        margin: 0 .5rem;    
+
+.footer-links {
+        margin: 0 .5rem;
 }
