--- a/src/sass/components/_bottonContact.scss
+++ b/src/sass/components/_bottonContact.scss
@@ -1,39 +1,40 @@
 #bottonContact {
-  grid-area: bottonContact;
+    grid-row: 5 / span 1;
+    @include respond(tab-port) {
+      grid-column: 1 / -1;
+      }
  }
 .bottonContact-container {
     height: 100%;
-    clip-path: polygon(0 7%, 100% 2%, 100% 97%, 0 90%);
+    clip-path: polygon(0 9%, 100% 2%, 100% 97%, 0 90%);
     background-color: $color-darker-gray;
     color: $color-ligther-gray;
     font-size: 2.2rem;
     padding: 14% 7%;
     @include respond(base) {
-      padding: 12% 7%;
     }
-    
+
     @include respond(phone) {
       font-size: 2.2rem;
-      // padding: 15% 7% 0 7%;
       }
     @include respond(tab-port) {
     font-size: 2.4rem;
-    padding: 9% 7% 0 7%;
+    // margin-top: 5rem;
     }
     @include respond(tab-land) {
       text-align: center;
-      padding: 4% 7% 0 7%;
+      padding: 5% 7% 0 7%;
     }
     @include respond(big-desktop) {
       font-size: 3rem;
       text-align: center;
-      padding: 6% 7% 0 7%;
     }
 }
+
 .bottonContact-text {
-  letter-spacing: 0;  
+  letter-spacing: 0;
   @include respond(big-desktop) {
-    
+
   }
   span {
       color: $color-primary;
