--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -112,7 +112,7 @@ li .menu {
 }
 
 .nav_ul {
-    background-color: rgba(0,0,0,.95);
+    background-color: rgba(0,0,0,0.9);
     flex-direction: column;
     position: fixed;
     top: 0;
@@ -141,7 +141,7 @@ li .menu {
     display:flex;
     font-size: 2.4rem;
     align-items: flex-start;
-    margin:3rem .5rem;
+    margin:2.5rem .5rem;
     height: 10%;
     width: 60%;
     @include respond(tab-land) {
