--- a/src/sass/components/_bottonContact.scss
+++ b/src/sass/components/_bottonContact.scss
@@ -23,7 +23,7 @@
     }
     @include respond(tab-land) {
       text-align: center;
-      padding: 5% 7% 0 7%;
+      padding: 5% 7% 2% 7%;
     }
     @include respond(big-desktop) {
       font-size: 3rem;
