--- a/src/sass/components/_process.scss
+++ b/src/sass/components/_process.scss
@@ -1,5 +1,5 @@
 #process {
-    grid-area: process;    
+    // grid-area: process;
 }
 .process-container {
     background-color: $color-light-gray;
@@ -37,13 +37,13 @@
     letter-spacing: -0.2rem;
     padding-left: 7%;
     @include respond(phone) {
-      font-size: 5.6rem;       
+      font-size: 5.6rem;
     }
     @include respond(tab-port) {
       font-size: 7rem;
       margin-top: 0;
       text-align: left;
-      
+
     }
     @include respond(big-desktop) {
         font-size: 10rem;
@@ -65,7 +65,7 @@
       height: 58%;
   }
 }
-.process-subtitles {   
+.process-subtitles {
   color: $color-primary;
   font-size: 3rem;
   margin: 3% 0;
