--- a/src/sass/components/_thingsMade.scss
+++ b/src/sass/components/_thingsMade.scss
@@ -1,7 +1,7 @@
 #thingsMade {
     grid-row: 4/ 5;
-    // padding:  0 2%;
     align-items: center;
+    padding: 0 9%;
     @include respond(base) {
     // grid-area: thingsMade;
     // display: flex;
@@ -10,9 +10,10 @@
     // text-align: center;
     }
     @include respond(tab-port) {
-    //   flex-direction:row;
-    //   flex-wrap: wrap;
-    //   align-content: center;
+        display: flex;
+      flex-direction:row;
+      flex-wrap: wrap;
+      align-content: center;
     }
     @include respond(tab-land) {
         // padding:  3% 7%;
