--- a/src/sass/pages/_work.scss
+++ b/src/sass/pages/_work.scss
@@ -44,7 +44,7 @@
     width: 100%;
     align-items: center;
     grid-gap: 2rem;
-    color: $color-darker-gray;
+    color: $color-light;
     grid-template-rows: repeat(4, minmax(40vh, min-content));
     grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
     align-items: center;
@@ -59,12 +59,9 @@
     }
 }
 .item {
-    // border: solid .3rem $color-primary-dark;
-    border-radius: 1rem;
-    background-repeat: no-repeat;
-    background-color: $color-light-gray;
     align-items: center;
     // justify-content: space-between;
+    border: solid 2px green;
     text-align: center;
     padding: 2rem;
     width: 100%;
@@ -84,25 +81,25 @@
         }
 }
 
-.bgushome {
-    background-image: url(../../../public/img/project-ushome-images/final-3.png);
-    @include bg-work;
-}
+// .bgushome {
+//     background-image: url(../../../public/img/project-ushome-images/final-3.png);
+//     @include bg-work;
+// }
 
-.bgmegafruver {
-    background-image: url(../../../public/img/project-megafruver-images/final-1.png);
-    @include bg-work;
-    }
+// .bgmegafruver {
+//     background-image: url(../../../public/img/project-megafruver-images/final-1.png);
+//     @include bg-work;
+//     }
 
-.bgwoodsidevision {
-    background-image: url(../../../public/img/project-woodsidevision-images/final-1.png);
-    @include bg-work;
-}
+// .bgwoodsidevision {
+//     background-image: url(../../../public/img/project-woodsidevision-images/final-1.png);
+//     @include bg-work;
+// }
 
-.bgjtportfolio {
-    background-image: url(../../../public/img/final-1.png);
-    @include bg-work;
-    }
+// .bgjtportfolio {
+//     background-image: url(../../../public/img/final-1.png);
+//     @include bg-work;
+//     }
 .item-top-text, .item-middle-text, .item-bottom-text {
 //   height: 20%;
   @include respond(base) {
