--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -4,7 +4,7 @@
     display: flex;
     justify-content: center;
     line-height: 3.2rem;
-    padding: 0 9%;
+    padding: 0 3.8rem;
 }
 .mainBox {
     height: 85vh;
@@ -28,6 +28,9 @@
     }
     @include respond(tab-land) {
         padding-top: 7%;
+    }
+    @include respond(big-desktop) {
+        padding-top: 0;
     }
 }
 .mainBox-note {
@@ -60,20 +63,21 @@
     }
     span {
         color: $color-primary;
-        font-weight: 800;
-        font-size: 3.8rem;
-        letter-spacing: -.2rem;
+        font-weight: 500;
+        font-size: 6rem;
+        letter-spacing: -.5rem;
         @include respond(phone) {
-            font-size: 3.9rem;
+            // font-size: 3.9rem;
         }
         @include respond(tab-port) {
-            font-size: 5rem;
+            font-size: 8rem;
+            line-height: 6rem;
         }
         @include respond(tab-land) {
-            font-size: 6rem;
+            // font-size: 6rem;
         }
         @include respond(big-desktop) {
-            font-size: 8.2rem;
+            font-size: 10rem;
 
         }
     }
@@ -81,12 +85,12 @@
 .mainBox-down {
     display: flex;
     justify-content: flex-end;
-    padding: 40% 10% 0 0;
+    padding: 50% 15% 0 0;
     @include respond(tab-port) {
-        padding: 5% 10% 0 0;
+        padding: 8% 5% 0 0;
     }
     @include respond(big-desktop) {
-        padding: 8% 5% 0 0;
+        padding: 3% 5% 0 0;
     }
 }
 
@@ -110,8 +114,8 @@
       letter-spacing: 0;
       @include respond(tab-port) {
         font-size: 1.5rem;
-        height: 15rem;
-        width: 15rem;
+        height: 13rem;
+        width: 13rem;
       }
     }
 
