--- a/src/sass/components/_thingsMade.scss
+++ b/src/sass/components/_thingsMade.scss
@@ -11,8 +11,8 @@
     }
     @include respond(tab-port) {
         display: flex;
-      flex-direction:row;
-      flex-wrap: wrap;
+      flex-direction:column;
+    //   flex-wrap: wrap;
       align-content: center;
     }
     @include respond(tab-land) {
@@ -28,25 +28,20 @@
 //   }
 
 .thingsMade-title {
-    font-size: 3.9rem;
+    font-size: 7.5rem;
+    line-height: 6rem;
     color:$color-primary;
     letter-spacing: -0.1rem;
-    margin: 8% 0;
+    margin: 3rem 0 4.5rem 0;
     text-align: center;
     @include respond(base) {
-    font-size: 3.9rem;
-    color:$color-primary;
-    letter-spacing: -0.1rem;
-    margin: 8% 0;
-}
+      color:$color-primary;
+      letter-spacing: -0.1rem;
+     }
     @include respond(phone) {
-      font-size: 4.2rem;
-      margin: 8% 0;
     }
     @include respond(tab-port) {
-    display: flex;
-      font-size: 6rem;
-      margin: 3%;
+      font-size: 8.5rem;
     }
     @include respond(big-desktop) {
         font-size: 9rem;
