--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -4,17 +4,18 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: $color-ligther-gray;
-    color: $color-dark;
+    background-color: $color-darker-gray;
+    color: $color-light;
     font-size: 1.5rem;
     font-weight: 500;
     padding: 1rem 0;
+    opacity: .4;
     p {
         font-size: 1.3rem;
     }
 }
 .footer a:visited {
-    color: $color-dark;
+    color: $color-light;
 }
 .footer a:hover{
     color: $color-primary;
