--- a/src/sass/pages/_work.scss
+++ b/src/sass/pages/_work.scss
@@ -39,113 +39,152 @@
     }
 }
 .work-container {
-    display: grid;
-    grid-auto-flow: dense;
+    display: flex;
+    flex-direction: column;
     width: 100%;
     align-items: center;
-    grid-gap: 2rem;
     color: $color-light;
-    grid-template-rows: repeat(4, minmax(40vh, min-content));
-    grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+    // display: grid;
+    // grid-gap: 2rem;
+    // grid-template-rows: repeat(4, minmax(40vh, min-content));
+    // grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
     align-items: center;
     @include respond(phone) {
-        grid-template-rows: repeat(2, minmax(40vh, min-content));
+        // grid-template-rows: repeat(2, minmax(40vh, min-content));
         }
     @include respond(tab-port) {
-        grid-template-rows: repeat(2, minmax(40vh, min-content));
+        // grid-template-rows: repeat(2, minmax(40vh, min-content));
         }
     @include respond(tab-land) {
-    grid-template-rows: repeat(1, minmax(40vh, min-content));
+    // grid-template-rows: repeat(1, minmax(40vh, min-content));
     }
 }
 .item {
+    display: flex;
+    flex-direction: column;
     align-items: center;
+    justify-content: space-evenly;
     // justify-content: space-between;
-    border: solid 2px green;
+    // border: solid 2px gray;
+    margin: 5.5rem 0;
     text-align: center;
-    padding: 2rem;
     width: 100%;
-    height: 100%;
+    min-height: 60vh;
 
     @include respond(base) {
         font-size: 1.7rem;
     }
     @include respond(tab-port) {
-    // height: 35vh;
+        flex-direction: row;
+        min-height: 45vh;
     // text-align: center;
     // font-size: 1.1rem;
     }
-    @include respond(tab-land) {
-        // height: 55vh;
-        // font-size: 1.6rem;
+    @include respond(big-desktop) {
+        min-height: 50vh;
         }
 }
 
-// .bgushome {
-//     background-image: url(../../../public/img/project-ushome-images/final-3.png);
-//     @include bg-work;
-// }
-
-// .bgmegafruver {
-//     background-image: url(../../../public/img/project-megafruver-images/final-1.png);
-//     @include bg-work;
-//     }
-
-// .bgwoodsidevision {
-//     background-image: url(../../../public/img/project-woodsidevision-images/final-1.png);
-//     @include bg-work;
-// }
-
-// .bgjtportfolio {
-//     background-image: url(../../../public/img/final-1.png);
-//     @include bg-work;
-//     }
-.item-top-text, .item-middle-text, .item-bottom-text {
-  @include respond(base) {
-
-    }
+.item_split-text {
+    width: 100%;
+    text-align: left;
     @include respond(tab-port) {
-
+        font-weight: 200;
+        font-size: 2rem;
+        padding-left: 5rem;
+    }
+    @include respond(big-desktop) {
+        font-size: 3rem;
+        margin-left: 5rem;
     }
 }
 
-.item-top-text {
+.item-titles {
+    font-size: 5.5rem;
+    font-weight: 600;
+    letter-spacing: -.2rem;
+    line-height: 3.9rem;
+    margin-bottom: 2rem;
+    @include respond(tab-port) {
+        line-height: 5rem;
+        margin-bottom: 3.5rem;
+        font-size: 7rem;
+    }
+    @include respond(tab-land) {
+        line-height: 6.5rem;
+        margin-bottom: 3.5rem;
+        font-size: 8.5rem;
+    }
+    @include respond(big-desktop) {
+        line-height: 9rem;
+        margin-bottom: 3.5rem;
+        font-size: 12rem;
+    }
+}
+.item-titles span {
+    margin-left: 1.8em;
+    @include respond(tab-port){
+        margin-left: 13rem;
+    }
+    @include respond(big-desktop) {
+        margin-left: 24rem;
+    }
+
+}
+.view-project {
+    text-align: right;
+    @include respond(tab-port){
+        margin-right: 3rem;
+    }
+}
+.view-project a {
+    color: #D2E603;
+    font-size: 2.5rem;
+    opacity: .3;
+    @include respond(tab-port) {
+        font-size: 2.5rem;
+    }
+}
+.view-project a:hover {
+    opacity: .9;
+}
+.item_split-image {
+    display: flex;
     font-size: 1.3rem;
+    min-height: 35vh;
+    width: 100%;
+    background-position: center;
+    background-size:contain;
+    background-repeat: no-repeat;
     @include respond(tab-land) {
         font-size: 1.2rem;
         @include respond(tab-port) {
             font-size: 1.2rem;
+            min-height: 50vh;
         }
         @include respond(tab-land) {
             font-size: 1.2rem;
         }
     }
 }
-.item-middle-text {
-    font-size: 1.5rem;
+.bgItem-1 {
+    background-image: url(../../../public/img/super_store.png);
     @include respond(tab-port) {
-        font-size: 1.2rem;
-    }
-    @include respond(tab-land) {
-        font-size: 1.5rem;
     }
 }
-.item-middle-text h2{
 
+.bgItem-2 {
+    background-image: url(../../../public/img/things-made-2.jpg);
     @include respond(tab-port) {
-        font-size: 1.5rem;
-    }
-    @include respond(tab-land) {
-        font-size: 2.4rem;
     }
 }
-
-
-.item-bottom-text p a {
-    color: $color-primary-dark;
-    font-size: 1.5rem;
+.bgItem-3 {
+    background-image: url(../../../public/img/project-ushome-images/final-1.png);
+    @include respond(tab-port) {
+    }
 }
-.item-bottom-text p a:hover {
-    color: $color-dark;
-    cursor: pointer;
+.bgItem-4 {
+    background-image: url(../../../public/img/project-megafruver-images/final-1.png);
+    @include respond(tab-port) {
+    }
 }
