--- a/src/sass/pages/_work.scss
+++ b/src/sass/pages/_work.scss
@@ -72,7 +72,7 @@
     min-height: 60vh;
 
     @include respond(base) {
-        font-size: 1.7rem;
+        font-size: 2rem;
     }
     @include respond(tab-port) {
         flex-direction: row;
@@ -91,7 +91,7 @@
     @include respond(tab-port) {
         font-weight: 200;
         font-size: 2rem;
-        padding-left: 5rem;
+        padding: 0 5rem;
     }
     @include respond(big-desktop) {
         font-size: 3rem;
