--- a/src/sass/components/_bottonContact.scss
+++ b/src/sass/components/_bottonContact.scss
@@ -23,7 +23,7 @@
     }
     @include respond(tab-land) {
       text-align: center;
-      padding: 5% 7% 5% 7%;
+      padding: 5% 15%;
     }
     @include respond(big-desktop) {
       font-size: 3rem;
@@ -44,7 +44,8 @@
   color: $color-primary;
   font-size: 2.2rem;
   &:hover {
-    color:$color-dark;
+    opacity: .5;
+    cursor: pointer;
   }
 }
 
