--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -7,7 +7,7 @@
     padding: 0 3.8rem;
 }
 .mainBox {
-    height: 85vh;
+    height: 80vh;
     width: 100%;
     background-image: linear-gradient(to right, #D2E603, #3E978B);
     padding: 10px;
@@ -51,11 +51,11 @@
     }
     @include respond(tab-port) {
         font-size: 3rem;
-        line-height: 4.5rem;
+        line-height: 6.5rem;
     }
     @include respond(tab-land) {
         font-size: 3.5rem;
-        line-height: 4.5rem;
+        line-height: 5.8rem;
     }
     @include respond(big-desktop) {
         font-size: 5.5rem;
@@ -85,12 +85,12 @@
 .mainBox-down {
     display: flex;
     justify-content: flex-end;
-    padding: 50% 15% 0 0;
+    padding: 3rem 3.5rem 0 0;
     @include respond(tab-port) {
-        padding: 8% 5% 0 0;
+        padding: 5rem 3.5rem 0 0;
     }
     @include respond(big-desktop) {
-        padding: 3% 5% 0 0;
+        padding: 5rem 3.5rem 0 0;
     }
 }
 
@@ -107,8 +107,8 @@
     }
     .mainBox-boton-text {
       animation: rotation 30s infinite linear;
-      height: 13rem;
-      width: 13rem;
+      height: 9rem;
+      width: 9rem;
       justify-content: center;
       font-size: 3rem;
       letter-spacing: 0;
