--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -35,6 +35,7 @@
 .middle_divider-split {
     padding: 2rem;
     flex-direction: row;
+    margin-top: 2rem;
     @include respond(tab-port) {
         padding: 0 1.8rem 0 1rem;
         min-width: 40vw;
